--- a/src/components/MainContent/MainContent.module.scss
+++ b/src/components/MainContent/MainContent.module.scss
@@ -1,4 +1,4 @@
-@use '../../styles/variables' as *;
+// Variables removed - using direct values
 /* MainContent uses only global classes and tokens now. Component-scoped styles removed. */
 
 
